<resources>
    <string name="app_name">LightHouse</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_record">Record</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="logout">LOGOUT</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="play_stop">Play or Stop</string>
    <string name="privacy_policy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacus purus, iaculis nec augue sed, pulvinar venenatis purus. Mauris nibh dui, finibus id fringilla non, interdum a turpis. Duis cursus mattis odio, sit amet vulputate ipsum finibus ac. Donec sagittis finibus odio, id lobortis tellus imperdiet finibus. Morbi convallis libero sem, ac eleifend sem congue sit amet. Maecenas tincidunt justo eu lacus facilisis volutpat. Nullam scelerisque massa sit amet nunc posuere, a semper nulla fringilla. Proin in eleifend sem.  Morbi ut justo orci. Phasellus venenatis ultrices nibh, vel congue risus faucibus sed. Etiam euismod mollis feugiat. Aliquam condimentum lectus nec vehicula scelerisque. Quisque quam nunc, sagittis efficitur justo et, viverra tristique nibh. Quisque ac turpis placerat, dapibus odio in, hendrerit lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec posuere nec lorem in bibendum. Sed euismod non tortor id mattis. Nullam dapibus odio arcu, non hendrerit sem posuere vitae. Maecenas hendrerit tellus quam, vitae egestas mauris tincidunt sit amet. Integer aliquam elit non dolor dapibus, non varius nibh rutrum. Suspendisse ante nulla, efficitur eget lacinia nec, consequat vel leo. Praesent mi tortor, sodales a blandit a, luctus at turpis. Sed at odio eget lacus rhoncus vestibulum nec sed eros. Nunc vulputate leo vitae sapien volutpat, vel accumsan turpis facilisis.  Ut eget erat tellus. Etiam sit amet arcu id dui commodo mollis. Nullam pretium ac mauris et sollicitudin. Nam eget nulla ut risus mollis mollis ac vel purus. Sed nisl velit, aliquam elementum felis a, scelerisque finibus quam. Quisque consectetur lobortis sapien at eleifend. Sed quis orci a ipsum accumsan luctus euismod vel augue. Phasellus fringilla lacus urna, in accumsan nulla pretium et. Vestibulum rhoncus tortor in libero ullamcorper, ut ultricies ante elementum. Maecenas et auctor leo. Quisque et cursus lacus. Donec consectetur ex lorem, et congue felis elementum ac. Fusce id pharetra nisl, vel dignissim nunc. Etiam euismod libero tincidunt, tempus urna vel, rutrum mauris.  Mauris venenatis cursus libero, quis faucibus enim dapibus in. Praesent id tempus risus. Ut eu nisi euismod, sagittis mauris ut, placerat nisi. Proin vel vestibulum ex, non imperdiet neque. Suspendisse facilisis lacinia ligula non sodales. Pellentesque sed pretium magna. Mauris quis ex vitae lectus dapibus molestie quis quis lacus. Phasellus a semper ante, ut placerat ipsum. In hac habitasse platea dictumst. Ut tempus eros leo, sit amet aliquam turpis dignissim quis. Donec dictum nulla nec nisi viverra euismod. Nunc volutpat tempor libero id suscipit.  Vestibulum ante lorem, tristique non sodales et, malesuada vitae lectus. Nullam urna nibh, pellentesque at ligula sit amet, faucibus posuere magna. Nullam varius commodo porta. Sed tempus, neque non rhoncus sagittis, augue lectus malesuada velit, vitae accumsan felis mauris nec purus. Suspendisse nulla tortor, sodales id rutrum ultrices, imperdiet sit amet sem. Quisque imperdiet risus ligula, eu convallis lacus pulvinar quis. Vestibulum ut purus vitae neque cursus consequat vitae a purus. Nunc orci turpis, ultricies a lacinia non, molestie at quam. Nulla facilisi. Nunc ac lacinia velit. Proin dolor odio, luctus in varius consequat, varius venenatis tellus. Nulla sollicitudin lorem et tortor dignissim, pretium auctor odio ornare. Nunc hendrerit malesuada eros a scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris eu leo sit amet mauris tempor ultrices sit amet sed nunc. Nulla facilisi.  Vestibulum non eleifend sem, sed aliquet orci. Integer nec lobortis purus. Proin vehicula tellus vitae scelerisque hendrerit. Nulla imperdiet at magna ut ullamcorper. Phasellus sit amet pulvinar velit, et varius purus. Etiam porttitor, ipsum at luctus hendrerit, augue nisl pretium dolor, in faucibus sem mi quis ligula. Etiam rutrum vel tortor vel sodales. Proin porta, risus dictum cursus sollicitudin, ex mauris consectetur lorem, ac feugiat mauris massa quis nisl. Integer pellentesque eros ut mi mollis, in pretium diam ornare. Nam nisl magna, dapibus vitae est eget, egestas blandit sapien. Morbi finibus at nisl et porttitor. Praesent sodales, libero et tempor ultricies, lorem diam volutpat lacus, sit amet accumsan ipsum risus a mi. Sed aliquet pulvinar odio vel luctus. Maecenas tincidunt erat ut massa pharetra, id tincidunt odio condimentum. Pellentesque at suscipit dui.  Cras ac sollicitudin ligula. Sed quis velit turpis. Vestibulum sollicitudin arcu at odio scelerisque vehicula. Sed ut diam pellentesque, euismod risus in, faucibus felis. Nulla facilisi. Praesent commodo mauris nec quam consectetur, iaculis fermentum elit cursus. Aenean ut varius nibh, non sodales ex. Pellentesque quis molestie nulla, sed faucibus mi. Sed eget tempus nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu lectus in metus viverra aliquet. Ut arcu nibh, vehicula eget faucibus vel, rhoncus rhoncus nibh.  Etiam id risus ac eros placerat congue in sit amet purus. Maecenas faucibus eros at tortor egestas, et aliquam neque tristique. Maecenas ac enim luctus, consectetur urna eget, ornare quam. Phasellus volutpat interdum urna sit amet aliquam. Mauris pharetra diam et dignissim laoreet. Cras dictum convallis eros ac pretium. In congue nisi sit amet purus accumsan finibus quis id ligula. Fusce dolor metus, porta gravida facilisis ut, sollicitudin quis lectus. In ut eros ac ex varius viverra non ut urna. Aliquam pellentesque, lorem a vulputate pellentesque, elit diam viverra ante, id mollis libero eros in quam. Mauris mi odio, tristique vitae pharetra quis, efficitur at turpis.  In rutrum, sapien ut lacinia tincidunt, nunc mauris finibus leo, ac tincidunt dolor leo tincidunt dolor. Nam ultrices semper sem et porttitor. Aenean laoreet, neque ac pulvinar sodales, lorem orci rhoncus eros, a ultrices turpis justo eget urna. Cras sed aliquam tellus. Donec posuere commodo purus, ut accumsan lectus elementum id. Cras eu consectetur justo. Cras ut finibus nulla. Pellentesque et dui sapien.  Nullam molestie magna eu faucibus sollicitudin. Nullam euismod ligula in blandit bibendum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam egestas rutrum dapibus. Suspendisse a fringilla mi. Cras facilisis dapibus felis, sit amet porta sem auctor ut. Nunc ut velit ut odio tristique suscipit id non justo. Phasellus at fermentum erat. Phasellus porttitor rutrum turpis, sed tristique purus varius id. In scelerisque mi eget posuere tempus. Vestibulum justo ex, porta vel feugiat ac, volutpat eget est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent id nibh in tortor molestie efficitur. Etiam suscipit vulputate nisl. Proin feugiat tincidunt aliquam. Maecenas at porta ante, ac mattis elit.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="set_back_up_email">Set Back-up Email</string>
    <string name="back_up_email_placeholder">email@example.com</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="account_type_title">Account Type:</string>
    <string name="add_two_factor_authentication">Add</string>
    <string name="add_two_factor_auth">Add two-factor authentication to your account?</string>
    <string name="title_account">Account</string>
    <string name="account_owner_title">Account Owner:</string>
    <string name="police_nearby_notify">Notify when police detected nearby</string>
    <string name="payment_due_notify">Notify when payment is due</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_title">Email us:</string>
    <string name="contact_email_text">support@lighthousetech.com</string>
    <string name="phone_title">Phone:</string>
    <string name="contact_phone_text">+353 91 234567</string>
    <string name="leave_note">Type message here . . .</string>
    <string name="send_feedback">Send</string>
    <string name="title_contact_us">Contact Us</string>
</resources>